--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  font_awesome_flutter: ^10.2.1
   lottie: ^2.0.0
   percent_indicator: ^4.2.2
 
@@ -55,6 +56,7 @@ flutter:
   assets:
     - assets/images/
     - assets/songs/
+    - assets/quran/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
